# CompanyManager

./: .gitignore  CMakeLists.txt  README.md  company_manager_ui.cpp  company_manager_ui.h  company_manager_ui.ui  department_view.ui  dialog_base.h  entry_view.cpp  entry_view.h  internal_workers.h  main.cpp  message.cpp  message.h  new_department_dialog.ui  new_employee_dialog.ui  new_entry_dialog.cpp  new_entry_dialog.h  tree_item.cpp  tree_item.h  tree_model.cpp  tree_model.h  tree_model_command.cpp  tree_model_command.h
allocator/: CMakeLists.txt  memory_management.h  object_pool.h  pool_allocator.h
chain_workers/: CMakeLists.txt  file_workers.cpp  file_workers.h  worker_interface.h
commands/: CMakeLists.txt  command_interface.h  file_io_command.cpp  file_io_command.h  xml_wrapper_command.cpp  xml_wrapper_command.h
company_manager_engine/: CMakeLists.txt  company_manager_engine.cpp  company_manager_engine.h
engine/: .gitignore  CMakeLists.txt  engine.cpp  engine.h  file_io_command.cpp  file_io_command.h  xml_wrapper_command.cpp  xml_wrapper_command.h
engine/allocator/: CMakeLists.txt  object_pool.h  pool_allocator_base.h
engine/chain_workers/: CMakeLists.txt  file_workers.cpp  file_workers.h
engine/commands/: CMakeLists.txt  command_interface.h
engine/dll_interface/: CMakeLists.txt  cm_engine_dll_interface.hpp
engine/task_manager/: CMakeLists.txt
engine/xml_parser/: CMakeLists.txt  range.h  xml.h  xml_exceptions.h  xml_node_builders.h  xml_serialize.cpp
engine/xml_wrappers/: CMakeLists.txt  xml_wrappers.h  xml_wrappers_builders.cpp
interface/: CMakeLists.txt  cm_gui_dll_interface.hpp  company_manager_ui.cpp  company_manager_ui.h  company_manager_ui.qrc  employee_view.ui  entry_view.cpp  entry_view.h  main_window.cpp  main_window.h  message.cpp  message.h  new_entry_dialog.cpp  new_entry_dialog.h  tree_item.h  tree_model.h  tree_model_command.h
task_manager/: CMakeLists.txt  task_manager.h
xml/: CMakeLists.txt  builder_base.h  range.h  xml.cpp  xml.h  xml_exceptions.h  xml_node_builders.h  xml_parse.cpp  xml_parse.h  xml_serialize.cpp  xml_serialize.h
xml_wrappers/: CMakeLists.txt  xml_wrappers.cpp  xml_wrappers.h  xml_wrappers_builders.cpp  xml_wrappers_builders.h
